fix needless overflow

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -627,7 +627,7 @@ input[type='checkbox'] {
   display: none;
   max-height: 100%;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   white-space: pre;
   box-sizing: border-box;
   font-size: 0.9em;
